nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud

    spec:
      volumes:
      - name: nextcloud
        persistentVolumeClaim:
          claimName: nextcloud-pvc

      containers:
      - image: nextcloud
        name: nextcloud
        ports:
        - containerPort: 80

        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud

      restartPolicy: Always

---
