nextcloud/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    app: nextcloud

---
